fix: remove overflow restrictions for scrolling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@ body {
 }
 
 html {
-  overflow: hidden;
+  overflow: visible;
 }
 
 a {
